fix: squash remaining bugs
check for file size before uploading (must be < 1MB). Add required property to text fields. Add a navigation list

--- a/css/home.css
+++ b/css/home.css
@@ -35,6 +35,13 @@ main {
     max-width: 75%;
 }
 
+ul {
+    display: flex;
+    gap: 1rem;
+    list-style-type: none;
+    align-items: center;
+}
+
 @media (width >= 26.5625em) {
     .files-container {
         grid-template-columns: repeat(auto-fit, minmax(10%, 1fr));
